force-app/main/default/objects/Assign_Add__c/Assign_Add__c.object-meta.xml
<CustomObject>
    <label>Assign Add</label>
    <nameField>
        <displayFormat>MAP-{000}</displayFormat>
        <label>Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assign Adds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>