force-app/main/default/objects/Assign_Add__c/fields/Advertisement_Hits__c.field-meta.xml
<CustomField>
    <fullName>Advertisement_Hits__c</fullName>
    <label>Advertisement Hits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>