force-app/main/default/objects/Assign_Add__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <label>UniqueIdentifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>