force-app/main/default/objects/Assign_Add__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Assign Adds</relationshipLabel>
    <relationshipName>Assign_Adds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>